# qpopcpp

./: CMakeLists.txt  Qpop.sln  README  README.MD
Header/: ancillary_functions.h  img_processing.h  qpop_app.h  qpop_frame.h  qpop_server.h  screen_capturer.h  settings_class.h  shared_access.h
Qpop/: Qpop.vcxproj  Qpop.vcxproj.filters  ReadMe.txt
Qpop/Header/: ancillary_functions.h  img_processing.h  qpop_app.h  qpop_server.h  screen_capturer.h  settings_class.h  shared_access.h
Qpop/Source/: Compiler_Project.sublime-workspace  img_processing.cpp  qpop.cpp  qpop_app.cpp  qpop_frame.cpp  qpop_server.cpp  screen_capturer.cpp  settings_class.cpp
Source/: image_captest.cpp  image_comparison.cpp  qpop.cpp  qpop_app.cpp  qpop_frame.cpp  qpop_server.cpp  screen_capturer.cpp  server_test.cpp  settings_class.cpp
executable/: lol.txt
